# MR2Dash

./: .gitignore  Audit.txt  CMakeLists.txt  GEMINI.md  deploy_pi.sh  setup.txt
src/: lv_conf.h  main.c
src/can/: can_bus.c  can_bus.h
src/hardware/: led_logic.c  led_logic.h  ws2812_driver.c  ws2812_driver.h
src/ui/: carbon_100.c  carbon_20.c  carbon_42.c  carbon_80.c  ui.c  ui.h
